feat: Dodano integracje z modelem gemini w celu weryfikacji poprawnosci analizowanych tresci

--- a/src/configs/example_secrets.env
+++ b/src/configs/example_secrets.env
@@ -5,3 +5,5 @@ dbHost="EnterYourDatabaseHostHere"
 dbName="EnterYourDatabaseNameHere"
 dbUser="EnterYourDatabaseUserHere"
 dbPassword="EnterYourDatabasePasswordHere"
+GEMINI_API_KEY="EnterYourGeminiApiKeyHere"
+GROQ_API_KEY="EnterYourGroqApiKeyHere"
