--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@noble/hashes": "^2.0.1",
     "@tailwindcss/cli": "^4.1.17",
     "@types/noble": "^0.0.44",
+    "argon2": "^0.44.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "ejs": "^3.1.10",
@@ -33,13 +34,19 @@
     "fs": "^0.0.1-security",
     "groq-sdk": "^0.34.0",
     "https": "^1.0.0",
+    "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.15.3",
+    "nodemailer": "^7.0.10",
     "path": "^0.12.7",
     "tailwindcss": "^4.1.17",
-    "tsx": "^4.20.6"
+    "tsx": "^4.20.6",
+    "validator": "^13.15.23"
   },
   "devDependencies": {
     "@types/cors": "^2.8.19",
-    "@types/express": "^5.0.5"
+    "@types/express": "^5.0.5",
+    "@types/jsonwebtoken": "^9.0.10",
+    "@types/nodemailer": "^7.0.3",
+    "@types/validator": "^13.15.9"
   }
 }
