--- a/src/configs/example_secrets.env
+++ b/src/configs/example_secrets.env
@@ -7,3 +7,7 @@ dbUser="EnterYourDatabaseUserHere"
 dbPassword="EnterYourDatabasePasswordHere"
 GEMINI_API_KEY="EnterYourGeminiApiKeyHere"
 GROQ_API_KEY="EnterYourGroqApiKeyHere"
+mailHost="EnterYourMailHost"
+mailPass="EnterYourMailPassword"
+mailUser="EnterYourMailUser"
+jwtSecret="EnterJWTSecret"
