--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@tailwindcss/cli": "^4.1.17",
     "@types/noble": "^0.0.44",
     "argon2": "^0.44.0",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "ejs": "^3.1.10",
@@ -43,6 +44,7 @@
     "validator": "^13.15.23"
   },
   "devDependencies": {
+    "@types/cookie-parser": "^1.4.10",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.5",
     "@types/jsonwebtoken": "^9.0.10",
