--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "mysql2": "^3.15.3",
     "nodemailer": "^7.0.10",
     "path": "^0.12.7",
+    "socket.io": "^4.8.1",
     "tailwindcss": "^4.1.17",
     "tsx": "^4.20.6",
     "validator": "^13.15.23"
