fix: Naprawionio bledy

--- a/src/configs/example_secrets.env
+++ b/src/configs/example_secrets.env
@@ -6,7 +6,7 @@ dbName="EnterYourDatabaseNameHere"
 dbUser="EnterYourDatabaseUserHere"
 dbPassword="EnterYourDatabasePasswordHere"
 GEMINI_API_KEY="EnterYourGeminiApiKeyHere"
-mailHost="EnterYourMailHost"
+mailHost="EnterYourMailHost"  // e.g., "smtp.gmail.com"
 mailPass="EnterYourMailPassword"
 mailUser="EnterYourMailUser"
 jwtSecret="EnterJWTSecret"
